src/http/req_parser.cpp

#line 1 "src/http/req_parser.rl"
#include "req_parser.h"
#include "config.h"
#include "utils/logging.h"
#include "utils/helpers.h"
#include <cstring>
#include <cassert>


#line 12 "src/http/req_parser.cpp"
static const int http_parser_start = 1;
static const int http_parser_first_final = 80;
static const int http_parser_error = 0;

static const int http_parser_en_main = 1;


#line 142 "src/http/req_parser.rl"


namespace Http {

void RequestParser::store_parsed(char const* start, char const* end, std::string& target){
  if (!start || !end){
    LOG_ERROR("invalid start/end pointers");
    cs = http_parser_error;
    return;
  }
  target = partial_buf + std::string(start, static_cast<size_t>(end - start));
  mark_active = false;
  partial_buf = "";
}

void RequestParser::store_parsed_header_value(char const* start, char const* end){
  if (!start || !end){
    LOG_ERROR("invalid start/end pointers");
    cs = http_parser_error;
    return;
  }
  if (cur_header_name == ""){
    LOG_ERROR("a header name must not be empty");
    cs = http_parser_error;
    return;
  }
  auto value = partial_buf + std::string(start, static_cast<size_t>(end - start));

  result.headers.set(cur_header_name, str_trim(value));

  mark_active = false;
  partial_buf = "";
  cur_header_name = "";
}

void RequestParser::store_parsed_header_name(char const* start, char const* end){
  if (!start || !end){
    LOG_ERROR("invalid start/end pointers");
    cs = http_parser_error;
    return;
  }
  if (cur_header_name != ""){
    LOG_ERROR("a header must be empty");
    cs = http_parser_error;
    return;
  }
  cur_header_name = partial_buf + std::string(start, static_cast<size_t>(end - start));
  mark_active = false;
  partial_buf = "";
}

void RequestParser::init(){
  cur_header_name = "";
  partial_buf = "";
  mark_active = false;
  result = Request{};
  bytes_read = 0;
  
#line 79 "src/http/req_parser.cpp"
	{
	 this->cs = http_parser_start;
	}

#line 200 "src/http/req_parser.rl"
}

RequestParsingStatus RequestParser::parse_request(char const* data, size_t len, size_t offset) {
    if (offset > len) {
      LOG_ERROR("offset must be smaller than the buffer size");
      return RequestParsingStatus::Error;
    }

    const char* p {data + offset}; 
    const char* pe {data + len}; 

    char const* mark {nullptr};
    if (mark_active) {
      mark = p;
    }

    
#line 102 "src/http/req_parser.cpp"
	{
	if ( p == pe )
		goto _test_eof;
	switch (  this->cs )
	{
case 1:
	switch( (*p) ) {
		case 68: goto tr0;
		case 71: goto tr2;
		case 72: goto tr3;
		case 79: goto tr4;
		case 80: goto tr5;
	}
	goto st0;
st0:
 this->cs = 0;
	goto _out;
tr0:
#line 13 "src/http/req_parser.rl"
	{
  mark = p;
}
	goto st2;
st2:
	if ( ++p == pe )
		goto _test_eof2;
case 2:
#line 130 "src/http/req_parser.cpp"
	if ( (*p) == 69 )
		goto st3;
	goto st0;
st3:
	if ( ++p == pe )
		goto _test_eof3;
case 3:
	if ( (*p) == 76 )
		goto st4;
	goto st0;
st4:
	if ( ++p == pe )
		goto _test_eof4;
case 4:
	if ( (*p) == 69 )
		goto st5;
	goto st0;
st5:
	if ( ++p == pe )
		goto _test_eof5;
case 5:
	if ( (*p) == 84 )
		goto st6;
	goto st0;
st6:
	if ( ++p == pe )
		goto _test_eof6;
case 6:
	if ( (*p) == 69 )
		goto st7;
	goto st0;
st7:
	if ( ++p == pe )
		goto _test_eof7;
case 7:
	if ( (*p) == 32 )
		goto tr11;
	goto st0;
tr11:
#line 22 "src/http/req_parser.rl"
	{
  store_parsed(mark, p, result.method);
  mark = nullptr;
}
	goto st8;
st8:
	if ( ++p == pe )
		goto _test_eof8;
case 8:
#line 180 "src/http/req_parser.cpp"
	switch( (*p) ) {
		case 33: goto tr12;
		case 37: goto tr13;
		case 47: goto tr14;
		case 59: goto tr12;
		case 61: goto tr12;
		case 64: goto tr12;
		case 95: goto tr12;
		case 126: goto tr12;
	}
	if ( (*p) < 65 ) {
		if ( 36 <= (*p) && (*p) <= 57 )
			goto tr12;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto tr15;
	} else
		goto tr15;
	goto st0;
tr12:
#line 13 "src/http/req_parser.rl"
	{
  mark = p;
}
	goto st9;
st9:
	if ( ++p == pe )
		goto _test_eof9;
case 9:
#line 210 "src/http/req_parser.cpp"
	switch( (*p) ) {
		case 32: goto tr16;
		case 33: goto st9;
		case 35: goto tr18;
		case 37: goto st29;
		case 47: goto st31;
		case 59: goto st9;
		case 61: goto st9;
		case 63: goto tr21;
		case 95: goto st9;
		case 126: goto st9;
	}
	if ( (*p) < 64 ) {
		if ( 36 <= (*p) && (*p) <= 57 )
			goto st9;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st9;
	} else
		goto st9;
	goto st0;
tr16:
#line 42 "src/http/req_parser.rl"
	{
  store_parsed(mark, p, result.uri.path);
  mark = nullptr;
}
	goto st10;
tr42:
#line 13 "src/http/req_parser.rl"
	{
  mark = p;
}
#line 37 "src/http/req_parser.rl"
	{
  store_parsed(mark, p, result.uri.fragment);
  mark = nullptr;
}
	goto st10;
tr45:
#line 37 "src/http/req_parser.rl"
	{
  store_parsed(mark, p, result.uri.fragment);
  mark = nullptr;
}
	goto st10;
tr52:
#line 13 "src/http/req_parser.rl"
	{
  mark = p;
}
#line 32 "src/http/req_parser.rl"
	{
  store_parsed(mark, p, result.uri.query);
  mark = nullptr;
}
	goto st10;
tr56:
#line 32 "src/http/req_parser.rl"
	{
  store_parsed(mark, p, result.uri.query);
  mark = nullptr;
}
	goto st10;
tr62:
#line 13 "src/http/req_parser.rl"
	{
  mark = p;
}
#line 27 "src/http/req_parser.rl"
	{
  store_parsed(mark, p, result.uri.hostname);
  mark = nullptr;
}
#line 42 "src/http/req_parser.rl"
	{
  store_parsed(mark, p, result.uri.path);
  mark = nullptr;
}
	goto st10;
tr70:
#line 27 "src/http/req_parser.rl"
	{
  store_parsed(mark, p, result.uri.hostname);
  mark = nullptr;
}
#line 42 "src/http/req_parser.rl"
	{
  store_parsed(mark, p, result.uri.path);
  mark = nullptr;
}
	goto st10;
tr91:
#line 52 "src/http/req_parser.rl"
	{
  store_parsed(mark, p, result.uri.port);
  mark = nullptr;
}
#line 42 "src/http/req_parser.rl"
	{
  store_parsed(mark, p, result.uri.path);
  mark = nullptr;
}
	goto st10;
st10:
	if ( ++p == pe )
		goto _test_eof10;
case 10:
#line 319 "src/http/req_parser.cpp"
	if ( (*p) == 72 )
		goto st11;
	goto st0;
st11:
	if ( ++p == pe )
		goto _test_eof11;
case 11:
	if ( (*p) == 84 )
		goto st12;
	goto st0;
st12:
	if ( ++p == pe )
		goto _test_eof12;
case 12:
	if ( (*p) == 84 )
		goto st13;
	goto st0;
st13:
	if ( ++p == pe )
		goto _test_eof13;
case 13:
	if ( (*p) == 80 )
		goto st14;
	goto st0;
st14:
	if ( ++p == pe )
		goto _test_eof14;
case 14:
	if ( (*p) == 47 )
		goto st15;
	goto st0;
st15:
	if ( ++p == pe )
		goto _test_eof15;
case 15:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr27;
	goto st0;
tr27:
#line 13 "src/http/req_parser.rl"
	{
  mark = p;
}
	goto st16;
st16:
	if ( ++p == pe )
		goto _test_eof16;
case 16:
#line 368 "src/http/req_parser.cpp"
	if ( (*p) == 46 )
		goto st17;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st16;
	goto st0;
st17:
	if ( ++p == pe )
		goto _test_eof17;
case 17:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st18;
	goto st0;
st18:
	if ( ++p == pe )
		goto _test_eof18;
case 18:
	if ( (*p) == 13 )
		goto tr31;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st18;
	goto st0;
tr31:
#line 17 "src/http/req_parser.rl"
	{
  store_parsed(mark, p, result.proto);
  mark = nullptr;
}
	goto st19;
tr39:
#line 13 "src/http/req_parser.rl"
	{
  mark = p;
}
#line 57 "src/http/req_parser.rl"
	{
  store_parsed_header_value(mark, p);
  mark = nullptr;
}
	goto st19;
tr41:
#line 57 "src/http/req_parser.rl"
	{
  store_parsed_header_value(mark, p);
  mark = nullptr;
}
	goto st19;
st19:
	if ( ++p == pe )
		goto _test_eof19;
case 19:
#line 419 "src/http/req_parser.cpp"
	if ( (*p) == 10 )
		goto st20;
	goto st0;
st20:
	if ( ++p == pe )
		goto _test_eof20;
case 20:
	switch( (*p) ) {
		case 13: goto st21;
		case 33: goto tr34;
		case 124: goto tr34;
		case 126: goto tr34;
	}
	if ( (*p) < 45 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto tr34;
		} else if ( (*p) >= 35 )
			goto tr34;
	} else if ( (*p) > 46 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto tr34;
		} else if ( (*p) > 90 ) {
			if ( 94 <= (*p) && (*p) <= 122 )
				goto tr34;
		} else
			goto tr34;
	} else
		goto tr34;
	goto st0;
st21:
	if ( ++p == pe )
		goto _test_eof21;
case 21:
	if ( (*p) == 10 )
		goto tr35;
	goto st0;
tr35:
#line 67 "src/http/req_parser.rl"
	{
  LOG_DEBUG("Parsing is done");
  {p++;  this->cs = 80; goto _out;}
}
	goto st80;
st80:
	if ( ++p == pe )
		goto _test_eof80;
case 80:
#line 469 "src/http/req_parser.cpp"
	goto st0;
tr34:
#line 13 "src/http/req_parser.rl"
	{
  mark = p;
}
	goto st22;
st22:
	if ( ++p == pe )
		goto _test_eof22;
case 22:
#line 481 "src/http/req_parser.cpp"
	switch( (*p) ) {
		case 33: goto st22;
		case 58: goto tr37;
		case 124: goto st22;
		case 126: goto st22;
	}
	if ( (*p) < 45 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto st22;
		} else if ( (*p) >= 35 )
			goto st22;
	} else if ( (*p) > 46 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto st22;
		} else if ( (*p) > 90 ) {
			if ( 94 <= (*p) && (*p) <= 122 )
				goto st22;
		} else
			goto st22;
	} else
		goto st22;
	goto st0;
tr37:
#line 62 "src/http/req_parser.rl"
	{
  store_parsed_header_name(mark, p);
  mark = nullptr;
}
	goto st23;
st23:
	if ( ++p == pe )
		goto _test_eof23;
case 23:
#line 517 "src/http/req_parser.cpp"
	if ( (*p) == 13 )
		goto tr39;
	goto tr38;
tr38:
#line 13 "src/http/req_parser.rl"
	{
  mark = p;
}
	goto st24;
st24:
	if ( ++p == pe )
		goto _test_eof24;
case 24:
#line 531 "src/http/req_parser.cpp"
	if ( (*p) == 13 )
		goto tr41;
	goto st24;
tr18:
#line 42 "src/http/req_parser.rl"
	{
  store_parsed(mark, p, result.uri.path);
  mark = nullptr;
}
	goto st25;
tr54:
#line 13 "src/http/req_parser.rl"
	{
  mark = p;
}
#line 32 "src/http/req_parser.rl"
	{
  store_parsed(mark, p, result.uri.query);
  mark = nullptr;
}
	goto st25;
tr58:
#line 32 "src/http/req_parser.rl"
	{
  store_parsed(mark, p, result.uri.query);
  mark = nullptr;
}
	goto st25;
tr64:
#line 13 "src/http/req_parser.rl"
	{
  mark = p;
}
#line 27 "src/http/req_parser.rl"
	{
  store_parsed(mark, p, result.uri.hostname);
  mark = nullptr;
}
#line 42 "src/http/req_parser.rl"
	{
  store_parsed(mark, p, result.uri.path);
  mark = nullptr;
}
	goto st25;
tr72:
#line 27 "src/http/req_parser.rl"
	{
  store_parsed(mark, p, result.uri.hostname);
  mark = nullptr;
}
#line 42 "src/http/req_parser.rl"
	{
  store_parsed(mark, p, result.uri.path);
  mark = nullptr;
}
	goto st25;
tr92:
#line 52 "src/http/req_parser.rl"
	{
  store_parsed(mark, p, result.uri.port);
  mark = nullptr;
}
#line 42 "src/http/req_parser.rl"
	{
  store_parsed(mark, p, result.uri.path);
  mark = nullptr;
}
	goto st25;
st25:
	if ( ++p == pe )
		goto _test_eof25;
case 25:
#line 604 "src/http/req_parser.cpp"
	switch( (*p) ) {
		case 32: goto tr42;
		case 33: goto tr43;
		case 37: goto tr44;
		case 61: goto tr43;
		case 95: goto tr43;
		case 126: goto tr43;
	}
	if ( (*p) < 63 ) {
		if ( 36 <= (*p) && (*p) <= 59 )
			goto tr43;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto tr43;
	} else
		goto tr43;
	goto st0;
tr43:
#line 13 "src/http/req_parser.rl"
	{
  mark = p;
}
	goto st26;
st26:
	if ( ++p == pe )
		goto _test_eof26;
case 26:
#line 632 "src/http/req_parser.cpp"
	switch( (*p) ) {
		case 32: goto tr45;
		case 33: goto st26;
		case 37: goto st27;
		case 61: goto st26;
		case 95: goto st26;
		case 126: goto st26;
	}
	if ( (*p) < 63 ) {
		if ( 36 <= (*p) && (*p) <= 59 )
			goto st26;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st26;
	} else
		goto st26;
	goto st0;
tr44:
#line 13 "src/http/req_parser.rl"
	{
  mark = p;
}
	goto st27;
st27:
	if ( ++p == pe )
		goto _test_eof27;
case 27:
#line 660 "src/http/req_parser.cpp"
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st28;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st28;
	} else
		goto st28;
	goto st0;
st28:
	if ( ++p == pe )
		goto _test_eof28;
case 28:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st26;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st26;
	} else
		goto st26;
	goto st0;
tr13:
#line 13 "src/http/req_parser.rl"
	{
  mark = p;
}
	goto st29;
st29:
	if ( ++p == pe )
		goto _test_eof29;
case 29:
#line 693 "src/http/req_parser.cpp"
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st30;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st30;
	} else
		goto st30;
	goto st0;
st30:
	if ( ++p == pe )
		goto _test_eof30;
case 30:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st9;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st9;
	} else
		goto st9;
	goto st0;
tr66:
#line 13 "src/http/req_parser.rl"
	{
  mark = p;
}
#line 27 "src/http/req_parser.rl"
	{
  store_parsed(mark, p, result.uri.hostname);
  mark = nullptr;
}
	goto st31;
tr74:
#line 27 "src/http/req_parser.rl"
	{
  store_parsed(mark, p, result.uri.hostname);
  mark = nullptr;
}
#line 13 "src/http/req_parser.rl"
	{
  mark = p;
}
	goto st31;
tr93:
#line 52 "src/http/req_parser.rl"
	{
  store_parsed(mark, p, result.uri.port);
  mark = nullptr;
}
#line 13 "src/http/req_parser.rl"
	{
  mark = p;
}
	goto st31;
st31:
	if ( ++p == pe )
		goto _test_eof31;
case 31:
#line 753 "src/http/req_parser.cpp"
	switch( (*p) ) {
		case 32: goto tr16;
		case 33: goto st31;
		case 35: goto tr18;
		case 37: goto st32;
		case 61: goto st31;
		case 63: goto tr21;
		case 95: goto st31;
		case 126: goto st31;
	}
	if ( (*p) < 64 ) {
		if ( 36 <= (*p) && (*p) <= 59 )
			goto st31;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st31;
	} else
		goto st31;
	goto st0;
st32:
	if ( ++p == pe )
		goto _test_eof32;
case 32:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st33;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st33;
	} else
		goto st33;
	goto st0;
st33:
	if ( ++p == pe )
		goto _test_eof33;
case 33:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st31;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st31;
	} else
		goto st31;
	goto st0;
tr21:
#line 42 "src/http/req_parser.rl"
	{
  store_parsed(mark, p, result.uri.path);
  mark = nullptr;
}
	goto st34;
tr68:
#line 13 "src/http/req_parser.rl"
	{
  mark = p;
}
#line 27 "src/http/req_parser.rl"
	{
  store_parsed(mark, p, result.uri.hostname);
  mark = nullptr;
}
#line 42 "src/http/req_parser.rl"
	{
  store_parsed(mark, p, result.uri.path);
  mark = nullptr;
}
	goto st34;
tr76:
#line 27 "src/http/req_parser.rl"
	{
  store_parsed(mark, p, result.uri.hostname);
  mark = nullptr;
}
#line 42 "src/http/req_parser.rl"
	{
  store_parsed(mark, p, result.uri.path);
  mark = nullptr;
}
	goto st34;
tr95:
#line 52 "src/http/req_parser.rl"
	{
  store_parsed(mark, p, result.uri.port);
  mark = nullptr;
}
#line 42 "src/http/req_parser.rl"
	{
  store_parsed(mark, p, result.uri.path);
  mark = nullptr;
}
	goto st34;
st34:
	if ( ++p == pe )
		goto _test_eof34;
case 34:
#line 850 "src/http/req_parser.cpp"
	switch( (*p) ) {
		case 32: goto tr52;
		case 33: goto tr53;
		case 35: goto tr54;
		case 37: goto tr55;
		case 61: goto tr53;
		case 95: goto tr53;
		case 126: goto tr53;
	}
	if ( (*p) < 63 ) {
		if ( 36 <= (*p) && (*p) <= 59 )
			goto tr53;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto tr53;
	} else
		goto tr53;
	goto st0;
tr53:
#line 13 "src/http/req_parser.rl"
	{
  mark = p;
}
	goto st35;
st35:
	if ( ++p == pe )
		goto _test_eof35;
case 35:
#line 879 "src/http/req_parser.cpp"
	switch( (*p) ) {
		case 32: goto tr56;
		case 33: goto st35;
		case 35: goto tr58;
		case 37: goto st36;
		case 61: goto st35;
		case 95: goto st35;
		case 126: goto st35;
	}
	if ( (*p) < 63 ) {
		if ( 36 <= (*p) && (*p) <= 59 )
			goto st35;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st35;
	} else
		goto st35;
	goto st0;
tr55:
#line 13 "src/http/req_parser.rl"
	{
  mark = p;
}
	goto st36;
st36:
	if ( ++p == pe )
		goto _test_eof36;
case 36:
#line 908 "src/http/req_parser.cpp"
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st37;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st37;
	} else
		goto st37;
	goto st0;
st37:
	if ( ++p == pe )
		goto _test_eof37;
case 37:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st35;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st35;
	} else
		goto st35;
	goto st0;
tr14:
#line 13 "src/http/req_parser.rl"
	{
  mark = p;
}
	goto st38;
st38:
	if ( ++p == pe )
		goto _test_eof38;
case 38:
#line 941 "src/http/req_parser.cpp"
	switch( (*p) ) {
		case 32: goto tr16;
		case 33: goto st31;
		case 35: goto tr18;
		case 37: goto st32;
		case 47: goto st39;
		case 61: goto st31;
		case 63: goto tr21;
		case 95: goto st31;
		case 126: goto st31;
	}
	if ( (*p) < 64 ) {
		if ( 36 <= (*p) && (*p) <= 59 )
			goto st31;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st31;
	} else
		goto st31;
	goto st0;
st39:
	if ( ++p == pe )
		goto _test_eof39;
case 39:
	switch( (*p) ) {
		case 32: goto tr62;
		case 33: goto tr63;
		case 35: goto tr64;
		case 37: goto tr65;
		case 47: goto tr66;
		case 58: goto tr67;
		case 61: goto tr63;
		case 63: goto tr68;
		case 64: goto st47;
		case 95: goto tr63;
		case 126: goto tr63;
	}
	if ( (*p) < 65 ) {
		if ( 36 <= (*p) && (*p) <= 59 )
			goto tr63;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto tr63;
	} else
		goto tr63;
	goto st0;
tr63:
#line 13 "src/http/req_parser.rl"
	{
  mark = p;
}
	goto st40;
st40:
	if ( ++p == pe )
		goto _test_eof40;
case 40:
#line 998 "src/http/req_parser.cpp"
	switch( (*p) ) {
		case 32: goto tr70;
		case 33: goto st40;
		case 35: goto tr72;
		case 37: goto st41;
		case 47: goto tr74;
		case 58: goto tr75;
		case 61: goto st40;
		case 63: goto tr76;
		case 64: goto st47;
		case 95: goto st40;
		case 126: goto st40;
	}
	if ( (*p) < 65 ) {
		if ( 36 <= (*p) && (*p) <= 59 )
			goto st40;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st40;
	} else
		goto st40;
	goto st0;
tr65:
#line 13 "src/http/req_parser.rl"
	{
  mark = p;
}
	goto st41;
st41:
	if ( ++p == pe )
		goto _test_eof41;
case 41:
#line 1031 "src/http/req_parser.cpp"
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st42;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st42;
	} else
		goto st42;
	goto st0;
st42:
	if ( ++p == pe )
		goto _test_eof42;
case 42:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st40;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st40;
	} else
		goto st40;
	goto st0;
tr67:
#line 13 "src/http/req_parser.rl"
	{
  mark = p;
}
#line 27 "src/http/req_parser.rl"
	{
  store_parsed(mark, p, result.uri.hostname);
  mark = nullptr;
}
	goto st43;
tr75:
#line 27 "src/http/req_parser.rl"
	{
  store_parsed(mark, p, result.uri.hostname);
  mark = nullptr;
}
	goto st43;
st43:
	if ( ++p == pe )
		goto _test_eof43;
case 43:
#line 1076 "src/http/req_parser.cpp"
	switch( (*p) ) {
		case 32: goto tr16;
		case 33: goto st44;
		case 35: goto tr18;
		case 37: goto st45;
		case 47: goto st31;
		case 61: goto st44;
		case 63: goto tr21;
		case 64: goto st47;
		case 95: goto st44;
		case 126: goto st44;
	}
	if ( (*p) < 58 ) {
		if ( (*p) > 46 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto tr80;
		} else if ( (*p) >= 36 )
			goto st44;
	} else if ( (*p) > 59 ) {
		if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto st44;
		} else if ( (*p) >= 65 )
			goto st44;
	} else
		goto st44;
	goto st0;
st44:
	if ( ++p == pe )
		goto _test_eof44;
case 44:
	switch( (*p) ) {
		case 32: goto tr16;
		case 33: goto st44;
		case 35: goto tr18;
		case 37: goto st45;
		case 47: goto st31;
		case 61: goto st44;
		case 63: goto tr21;
		case 64: goto st47;
		case 95: goto st44;
		case 126: goto st44;
	}
	if ( (*p) < 65 ) {
		if ( 36 <= (*p) && (*p) <= 59 )
			goto st44;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st44;
	} else
		goto st44;
	goto st0;
st45:
	if ( ++p == pe )
		goto _test_eof45;
case 45:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st46;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st46;
	} else
		goto st46;
